k8s/backend-service.yaml
#kind: # https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: vote
spec:
  selector:
    app: backend
  type: NodePort
  ports:
  - name: "http"
    protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 30001
---
