k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db-service
  namespace: vote
spec:
  type: ClusterIP
  ports:
    - name: db
      port: 5432
      targetPort: 5432
  selector:
    app: db
