k8s/frontend-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: vote
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
  - name: frontend
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30005
---
