k8s/redis-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: vote
spec:
  selector:
    app: redis 
  ports:
    - port: 6379
    targetPort: 6379
---
